# K8S-UPGRADE-ANALYZER

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
deploy/: job.yaml  rbac.yaml  secret.yaml
k8s_upgrade_analyzer/: cli.py
k8s_upgrade_analyzer/claude/: __init__.py  client.py
k8s_upgrade_analyzer/collector/: __init__.py  cluster_info.py
k8s_upgrade_analyzer/models/: __init__.py  assessment.py
k8s_upgrade_analyzer/reporter/: __init__.py  report_generator.py
prompts/: system_prompt.md
reports/: assessment.md
tests/: test_collector.py
